fixing, cleaning and refactoring